--- a/src/css/styles1.css
+++ b/src/css/styles1.css
@@ -1,12 +1,12 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
 body {
-    background-color: #2576a8;
+    background-color: #f5f0ce;
 }
 
 img {
     display: block;
-    max-width: 35%;
+    max-width: 100%;
     height: auto;
 }
 
@@ -32,7 +32,7 @@ img {
 .loader {
     width: 48px;
     height: 48px;
-    border: 5px dotted #05532a;
+    border: 5px dotted #2596be;
     border-radius: 50%;
     display: inline-block;
     position: relative;
